Bug 402627 - Squelch warning about calling SetTitlebarColor on the hidden window. r=josh sr=roc a1.9=dsicore.